--- a/PLAY.CATALOG/src/Play.Catalog.Service/Play.Catalog.Service.csproj
+++ b/PLAY.CATALOG/src/Play.Catalog.Service/Play.Catalog.Service.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
+    <PackageReference Include="Microservices.Common" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
