--- a/INVENTORY/src/Inventory.Service/Inventory.Service.csproj
+++ b/INVENTORY/src/Inventory.Service/Inventory.Service.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microservices.Common" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
